Various fixes
- Account for scrollbar width, which prevents textarea and pre getting
out of sync in some cases
- load parameter still loads CSS even if value if empty. This is useful
when its value is generated
- Rename componentsLoaded to ready

--- a/prism-live.css
+++ b/prism-live.css
@@ -18,6 +18,7 @@ textarea.prism-live {
 	height: 100%;
 	z-index: 1;
 	color: transparent;
+	/* color: hsla(0,0%,100%,.4); */
 	cursor: text;
 	white-space: pre;
 	border: 0;
@@ -52,6 +53,9 @@ pre.prism-live {
 	pointer-events: none;
 	overflow: hidden;
 	max-height: 100%;
+	--scrollbar-width: 17px;
+	padding-bottom: var(--scrollbar-width);
+	padding-right: var(--scrollbar-width);
 }
 
 	pre.prism-live > code:empty::before {
